--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "start": "nodemon src/server.js --exec babel-node",
-    "build": "babel src -d dist --ignore **/__tests__/**,**/__mocks__/**",
+    "build": "./meta/build/generate_build.sh",
     "lint": "eslint 'src/**/*.js'",
     "unit": "jest \"src/.*\\.js$\" --coverage --forceExit",
     "e2e": "cross-env JEST_ENV=e2e jest \"src/.*\\.js$\" --forceExit",
